arrow-inject-compiler-plugin/src/testData/diagnostics/context-receivers/resolution_circular_proof_single_cycle_rule.kt
package foo.bar

import arrow.inject.annotations.Contextual
import arrow.inject.annotations.ContextResolution
import arrow.inject.annotations.context

context(Int)
@Contextual internal fun n(): Int {
  return this@Int
}

context(<!CIRCULAR_CYCLE_ON_GIVEN_PROOF!>Int<!>)
@ContextResolution
fun main() {

}
